More use of constructor, to avoid output changes